improve swagger
